--- a/priv/admin/css/snapshot.styl
+++ b/priv/admin/css/snapshot.styl
@@ -6,7 +6,7 @@ CSS to be applied ONLY on the snapshot page
 @import reusable
 
 #healthy-cluster, #unhealthy-cluster
-  margin-top : 25px
+  padding-top : 25px
   
   section
     padding-left : 336px
@@ -21,10 +21,11 @@ CSS to be applied ONLY on the snapshot page
     margin : 10px 0 0 20px
   
   li
+    monospace()
     line-height : 1.5
     
     a
-      color : mediumGray
+      color : lightGray
 
 #health-indicator
   dimensions(311px, 309px)
