--- a/priv/admin/js/templates/application.hbs
+++ b/priv/admin/js/templates/application.hbs
@@ -41,9 +41,5 @@
 </div><!-- #wrapper -->
 
 <div id="tooltips" class="hide">
-    <div id="inner-tooltips">
-        <table><tr>
-            <td id="display-tips" class="gui-text"></td>
-        </tr></table>
-    </div>
+    <div id="display-tips" class="gui-text"></div>
 </div>
