--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -8,9 +8,15 @@ CSS to be applied ONLY on the snapshot page
 #ring-filter
   text-align   : left
   padding-left : 25px
+  margin-top   : -5px
+  float        : right
 
   .gui-dropdown-wrapper
     dimensions(100%, 30px)
+    min-width : 169px
 
 h3
   color : lightGray
+
+#partition-list
+  margin-top : 13px
