--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -1,16 +1,21 @@
-<h1 id="cluster-headline" class="gui-headline-bold">Cluster View</h1>
+<section id="title-container">
+  <div class="side-line"></div>
+  <div class="title-box">
+    <span class="vert-border-left"></span>
+    <h1 id="cluster-headline" class="gui-headline-bold page-title">Cluster Management</h1>
+    <span class="vert-border-right"></span>
+  </div>
+  <div class="side-line"></div>
+  <div class="clear"></div>
+</section>
+
 <div id="add-node">
-    <h3 class="gui-headline">Add Nodes to the Cluster...</h3>
-    <table>
-        <tr>
+    <h2 class="gui-headline">Join Nodes</h2>
+    <span class="gui-text-flat italic">Type a node name or list of names separated by commas.</span>
+    <table class="add-node-table">
+        <tr class="no-highlight">
             <td id="add-node-box">
-                <div class="gui-field gui-text">
-                    <div class="gui-field-bg">
-                        <input id="node-to-add" class="gui-field-input gui-text" type="text" name="nodeName" />
-                    </div>
-                    <div class="gui-field-cap-left"></div>
-                    <div class="gui-field-cap-right"></div>
-                </div>
+                <input id="node-to-add" class="gui-input gui-text" type="text" name="nodeName" />
             </td>
             <td class="button-column">
                 <a id="add-node-button" class="gui-point-button gui-text-bold right">
@@ -33,11 +38,11 @@
 <div id="node-list" class="hide">
     <table class="list-table" id="cluster-table">
         <tr class="table-head has-cut">
-            <td><h3 class="gui-headline">Status</h3></td>
-            <td><h3 class="gui-headline">Name</h3></td>
-            <td><h3 class="gui-headline">Actions</h3></td>
-            <td><h3 class="gui-headline">Partitions</h3></td>
-            <td><h3 class="gui-headline">Memory Usage</h3></td>
+            <td><h3>Status</h3></td>
+            <td><h3>Name</h3></td>
+            <td><h3>Actions</h3></td>
+            <td><h3>Partitions</h3></td>
+            <td><h3>Memory Usage</h3></td>
         </tr>
     </table>
 </div>
@@ -50,12 +55,8 @@
             <a class="gui-light status-light"><span class="status">Joining...</span></a>
         </td>
         <td class="name-box gui-text">
-            <div class="gui-field gui-text">
-                <div class="gui-field-bg">
-                    <div class="name gui-field-input"></div>
-                </div>
-                <div class="gui-field-cap-left"></div>
-                <div class="gui-field-cap-right"></div>
+            <div class="gui-text">
+                <div class="name gui-field"></div>
             </div>
         </td>
         <td class="more-actions-slider-box gui-text">
@@ -72,16 +73,12 @@
             <div class="left pct-arrows pct-static">
                 <div class="green-pct-arrow"></div>
             </div>
-            <div class="left gui-field gui-text pct-box">
-                <div class="gui-field-bg">
-                    <div class="i-block ring_pct gui-field-input"></div>
-                    <!--
-                    <span class="monospace gray-text">:</span>
-                    <div class="i-block pending_pct gui-field-input"></div>
-                    -->
-                </div>
-                <div class="gui-field-cap-left"></div>
-                <div class="gui-field-cap-right"></div>
+            <div class="left gui-text pct-box">
+                <div class="i-block ring_pct gui-field"></div>
+                <!--
+                <span class="monospace gray-text">:</span>
+                <div class="i-block pending_pct gui-field-input"></div>
+                -->
             </div>
             <div class="clear"></div>
         </td>
