--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -2,7 +2,7 @@
   <div class="side-line"></div>
   <div class="title-box">
     <span class="vert-border-left"></span>
-    <h1 id="snapshot-headline" class="gui-headline-bold page-title">Current Ring</h1>
+    <h1 id="ring-headline" class="gui-headline-bold page-title">Current Ring</h1>
     <span class="vert-border-right"></span>
   </div>
   <div class="side-line">
@@ -19,30 +19,23 @@
   <li name="next"><span class="paginator" {{action nextPage href=true target="controller"}}>Next</span></li>
 </ul>
 <div class="cut"></div>
-
-<div id="partition-list" class="has-cut">
+<div id="partition-list">
     <table class="list-table" id="ring-table">
         <thead>
             <tr class="table-head has-cut">
-                <td><h3>#</h3></td>
-                <td><h3>Owner Node</h3></td>
-                <td><h3>KV</h3></td>
-                <td><h3>Pipe</h3></td>
-                <td><h3>Search</h3></td>
+                <th><h3>#</h3></th>
+                <th><h3>Owner Node</h3></th>
+                <th><h3>KV</h3></th>
+                <th><h3>Pipe</h3></th>
+                <th><h3>Search</h3></th>
             </tr>
         </thead>
         {{#collection RiakControl.PartitionView contentBinding="controller.paginatedContent"}}
           {{#with view.content}}
           <td class="partition-number gui-text">{{i}}</td>
           <td class="owner-box gui-text">
-              <div class="gui-field gui-text">
-                  <div class="gui-field-bg">
-                      <div class="owner gui-field-input">{{node}}</div>
-                      <div class="partition-index hide">{{index}}</div>
-                  </div>
-                  <div class="gui-field-cap-left"></div>
-                  <div class="gui-field-cap-right"></div>
-              </div>
+              <div class="owner gui-field">{{node}}</div>
+              <div class="partition-index hide">{{index}}</div>
           </td>
           {{/with}}
           {{#with view}}
@@ -68,7 +61,7 @@
         {{/collection}}
     </table>
 </div>
-
+<div class="cut"></div>
 <ul class="pagination gui-text">
   <li name="prev"><span class="paginator" {{action prevPage href=true target="controller"}}>Prev</span></li>
   {{#each pages}}
@@ -76,4 +69,3 @@
   {{/each}}
   <li name="next"><span class="paginator" {{action nextPage href=true target="controller"}}>Next</span></li>
 </ul>
-<div class="cut"></div>
