--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -20,3 +20,9 @@ h3
 
 #partition-list
   margin-top : 13px
+
+tr:hover
+  background-color : highlight
+  
+thead tr:hover, tr.no-highlight:hover
+  background-color : transparent
