--- a/priv/admin/css/cluster.styl
+++ b/priv/admin/css/cluster.styl
@@ -9,15 +9,152 @@ h3
   copy-font()
 
 #add-node
-  padding-top : 40px
+  padding-top   : 40px
+  margin-bottom : 25px
   
 .add-node-table tr td
   padding-top : 25px
-
+  
 .more-node-actions
   display : none
+  vendor('box-shadow', 0 3px 5px darkened)
+
+.more-node-actions td
+  padding : 0 5px
+  
+.actions-box
+  corners()
+  background    : darkened
+  margin-top    : -6px
+  margin-bottom : 15px
+  border-bottom : 1px solid lightWhite
+  padding       : 15px
+  margin-right  : 2em
+  display       : none
   
 .button-column
   text-align : right
 
+.switch-box
+  dimensions(200px, auto)
+  vertical-align : top
+  
+  div
+    padding-left : 4px
+    
+  span
+    display        : inline-block
+    height         : 27px
+    vertical-align : top
+    padding        : 10px 8px 0
+  
+  &.on span
+    vendor('box-shadow', inset 0 1px 3px darkened)
+    singleCorner(top, left, 4px)
+    singleCorner(top, right, 4px)
+    background     : darkened
 
+.status-box
+  dimensions(170px, auto)
+  
+.actions-header
+  padding-left : 6px
+
+
+
+.pct-box
+  margin-top     : 1px
+  display        : inline-block
+  vertical-align : middle
+
+.pct-arrows
+  dimensions(19px, 33px)
+  background     : url('/admin/ui/images/pct-arrows-sprite.png') no-repeat transparent
+  margin         : 0 5px 0 0
+  display        : inline-block
+  vertical-align : middle
+
+.pct-gaining
+  background-position : -19px top
+
+.pct-losing
+  background-position : -38px top
+
+.pct-static
+  background-position : left top
+
+.green-pct-arrow
+  dimensions(19px, 33px)
+  background : url('/admin/ui/images/pct-arrows-sprite.png') no-repeat -57px top transparent
+  margin     : 0 5px 0 0
+  display    : none
+
+#node-error
+  headline-font()
+  vendor('box-shadow', 0 2px 3px darkened)
+  corners()
+  padding    : 8px 10px 8px 12px
+  background : rgba(232, 78, 78, .5)
+  border     : 1px solid lighten(rgba(232, 78, 78, .5), 15%)
+  
+  .error-link
+    headline-bold()
+    padding-left : 5px
+    
+    &:hover
+      text-decoration : underline
+  
+  .close-error
+    dimensions(16px, 16px)
+    opaque(.6)
+    cursor         : pointer
+    display        : inline-block
+    float          : right
+    vertical-align : middle
+    background     : url('/admin/ui/images/close-error.png') left top no-repeat transparent
+    
+    &:hover
+      opaque(1)
+      
+.membar-bg
+  corners()
+  dimensions(79px, 32px)
+  position       : relative
+  display        : inline-block
+  vertical-align : middle
+  
+.membar-fg
+  corners()
+  gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .05))
+  vendor('box-shadow', 0 1px 0 lightWhite)
+  dimensions(100%, 28px)
+  absoluteLeft(0, 0)
+  width   : 75px
+  z-index : 5
+  border  : 2px solid #1d1d1d
+  
+.mem-colors
+  dimensions(75px, 28px)
+  float  : left
+  margin : 2px 0 0 2px
+  
+.membar-mem
+  dimensions(auto, 28px)
+  background : url('/admin/ui/images/mem-bar-overlay.png') left top repeat transparent
+  float      : left
+  z-index    : 1
+  //display : none !important
+
+.non-erlang-mem
+  @extend .membar-mem
+  background-color : rgba(65, 179, 243, .8)
+  
+.erlang-mem
+  @extend .membar-mem
+  background-color : rgba(254, 157, 46, .8)
+
+.unknown-mem
+  @extend .membar-mem
+  background-color : #404040
+  width            : 100%
+  
