--- a/priv/admin/css/compiled/cluster.css
+++ b/priv/admin/css/compiled/cluster.css
@@ -6,13 +6,188 @@ h3 {
 }
 #add-node {
   padding-top: 40px;
+  margin-bottom: 25px;
 }
 .add-node-table tr td {
   padding-top: 25px;
 }
 .more-node-actions {
   display: none;
+  -webkit-box-shadow: 0 3px 5px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0 3px 5px rgba(0,0,0,0.3);
+  box-shadow: 0 3px 5px rgba(0,0,0,0.3);
+}
+.more-node-actions td {
+  padding: 0 5px;
+}
+.actions-box {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background: rgba(0,0,0,0.3);
+  margin-top: -6px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid rgba(255,255,255,0.18);
+  padding: 15px;
+  margin-right: 2em;
+  display: none;
 }
 .button-column {
   text-align: right;
+}
+.switch-box {
+  width: 200px;
+  height: auto;
+  vertical-align: top;
+}
+.switch-box div {
+  padding-left: 4px;
+}
+.switch-box span {
+  display: inline-block;
+  height: 27px;
+  vertical-align: top;
+  padding: 10px 8px 0;
+}
+.switch-box.on span {
+  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+  -moz-border-radius-topright: 4px;
+  border-top-right-radius: 4px;
+  background: rgba(0,0,0,0.3);
+}
+.status-box {
+  width: 170px;
+  height: auto;
+}
+.actions-header {
+  padding-left: 6px;
+}
+.pct-box {
+  margin-top: 1px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.pct-arrows {
+  width: 19px;
+  height: 33px;
+  background: url("/admin/ui/images/pct-arrows-sprite.png") no-repeat transparent;
+  margin: 0 5px 0 0;
+  display: inline-block;
+  vertical-align: middle;
+}
+.pct-gaining {
+  background-position: -19px top;
+}
+.pct-losing {
+  background-position: -38px top;
+}
+.pct-static {
+  background-position: left top;
+}
+.green-pct-arrow {
+  width: 19px;
+  height: 33px;
+  background: url("/admin/ui/images/pct-arrows-sprite.png") no-repeat -57px top transparent;
+  margin: 0 5px 0 0;
+  display: none;
+}
+#node-error {
+  font-family: 'titillium', helvetica, arial, sans-serif;
+  -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  padding: 8px 10px 8px 12px;
+  background: rgba(232,78,78,0.5);
+  border: 1px solid rgba(235,105,105,0.5);
+}
+#node-error .error-link {
+  font-family: 'titillium', helvetica, arial, sans-serif;
+  font-weight: bold;
+  padding-left: 5px;
+}
+#node-error .error-link:hover {
+  text-decoration: underline;
+}
+#node-error .close-error {
+  width: 16px;
+  height: 16px;
+  opacity: 0.6;
+  filter: alpha(opacity=60);
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  vertical-align: middle;
+  background: url("/admin/ui/images/close-error.png") left top no-repeat transparent;
+}
+#node-error .close-error:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.membar-bg {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  width: 79px;
+  height: 32px;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+}
+.membar-fg {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background: rgba(255,255,255,0.05);
+  background: -moz-linear-gradient(top, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.05) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255,255,255,0.4)), color-stop(100%, rgba(255,255,255,0.05)));
+  background: -webkit-linear-gradient(top, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.05) 100%);
+  background: -o-linear-gradient(top, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.05) 100%);
+  background: -ms-linear-gradient(top, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.05) 100%);
+  background: linear-gradient(top bottom, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.05) 100%);
+  -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.18);
+  -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.18);
+  box-shadow: 0 1px 0 rgba(255,255,255,0.18);
+  width: 100%;
+  height: 28px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 75px;
+  z-index: 5;
+  border: 2px solid #1d1d1d;
+}
+.mem-colors {
+  width: 75px;
+  height: 28px;
+  float: left;
+  margin: 2px 0 0 2px;
+}
+.membar-mem,
+.non-erlang-mem,
+.erlang-mem,
+.unknown-mem {
+  width: auto;
+  height: 28px;
+  background: url("/admin/ui/images/mem-bar-overlay.png") left top repeat transparent;
+  float: left;
+  z-index: 1;
+}
+.non-erlang-mem {
+  background-color: rgba(65,179,243,0.8);
+}
+.erlang-mem {
+  background-color: rgba(254,157,46,0.8);
+}
+.unknown-mem {
+  background-color: #404040;
+  width: 100%;
 }
