--- a/priv/admin/css/compiled/ring.css
+++ b/priv/admin/css/compiled/ring.css
@@ -18,3 +18,10 @@ h3 {
 #partition-list {
   margin-top: 13px;
 }
+tr:hover {
+  background-color: rgba(255,255,255,0.08);
+}
+thead tr:hover,
+tr.no-highlight:hover {
+  background-color: transparent;
+}
