--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -19,7 +19,7 @@
             </td>
             <td class="button-column">
                 <a id="add-node-button" class="gui-point-button gui-text-bold right">
-                    <span class="gui-button-msg">Add Node</span>
+                    <span class="gui-button-msg">ADD NODES</span>
                 </a>
             </td>
         </tr>
@@ -31,7 +31,7 @@
     </div>
 </div><!-- #add-node -->
 
-<h2 class="gui-headline-bold has-cut">
+<h2 class="gui-headline has-cut">
     Node List
     <span id="total-number" class="gui-text"></span>
 </h2>
@@ -40,9 +40,9 @@
         <tr class="table-head has-cut">
             <td><h3>Status</h3></td>
             <td><h3>Name</h3></td>
-            <td><h3>Actions</h3></td>
+            <td><h3 class="actions-header">Actions</h3></td>
             <td><h3>Partitions</h3></td>
-            <td><h3>Memory Usage</h3></td>
+            <td><h3>RAM Use</h3></td>
         </tr>
     </table>
 </div>
@@ -59,6 +59,7 @@
                 <div class="name gui-field"></div>
             </div>
         </td>
+        <!-- Old slider template
         <td class="more-actions-slider-box gui-text">
             <div class="gui-slider gui-text">
                 <div class="gui-slider-activate"></div>
@@ -69,12 +70,20 @@
             </div>
             <div class="gui-slider-leaving hide"></div>
         </td>
+        -->
+        <!-- New switch template -->
+        <td class="switch-box off">
+            <div>
+                <div class="gui-switch off"></div>
+                <span>Actions</span>
+            </div>
+        </td>
         <td class="gui-text ring_pct-box">
             <div class="left pct-arrows pct-static">
                 <div class="green-pct-arrow"></div>
             </div>
             <div class="left gui-text pct-box">
-                <div class="i-block ring_pct gui-field"></div>
+                <div class="i-block ring_pct"></div>
                 <!--
                 <span class="monospace gray-text">:</span>
                 <div class="i-block pending_pct gui-field-input"></div>
@@ -83,10 +92,12 @@
             <div class="clear"></div>
         </td>
         <td class="gui-text memory-box">
-            <div class="left membar-bg">
-                <div class="erlang-mem mem-color left" name=""></div>
-                <div class="non-erlang-mem mem-color left" name=""></div>
-                <div class="unknown-mem"></div>
+            <div class="membar-bg">
+                <div class="mem-colors">
+                    <div class="erlang-mem mem-color left" name=""></div>
+                    <div class="non-erlang-mem mem-color left" name=""></div>
+                    <div class="unknown-mem"></div>
+                </div>
                 <div class="membar-fg"></div>
             </div>
             <span class="free-memory left"></span>
@@ -94,9 +105,8 @@
     </tr>
     <tr class="more-node-actions more-actions-template">
         <td>&nbsp;</td>
-        <td colspan="4" class="more-actions-td">
-            <div class="actions-pointer hide"></div>
-            <div class="actions-box gui-text hide">
+        <td colspan="3" class="more-actions-td">
+            <div class="actions-box gui-text">
                 <div class="shutdown-box left">
                     <a class="shutdown-button left"></a>
                     <span class="shutdown-label gui-text block left">Stop Node</span>
@@ -116,6 +126,7 @@
             </div>
             <div class="clear"></div>
         </td>
+        <td>&nbsp;</td>
     </tr>
 </table>
 <!-- end node template -->
