--- a/priv/admin/css/reusable.styl
+++ b/priv/admin/css/reusable.styl
@@ -9,6 +9,7 @@ lightWhite = rgba(255, 255, 255, .18)
 highlight  = rgba(255, 255, 255, .08)
 offlight   = #767676
 riakorange = #f99d33
+riakred    = #f05f5f
 
 /* End Variables */
 
