--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -26,3 +26,13 @@ tr:hover
   
 thead tr:hover, tr.no-highlight:hover
   background-color : transparent
+
+
+/* RESPONSIVE MEDIA QUERIES */
+
+@media screen and (max-width : 649px)
+    
+  .gui-light span
+    display : none
+
+/* END RESPONSIVE MEDIA QUERIES */
