--- a/priv/admin/js/templates/snapshot.hbs
+++ b/priv/admin/js/templates/snapshot.hbs
@@ -9,7 +9,7 @@
   <div class="side-line"></div>
   <div class="clear"></div>
 </section>
-<div class="relative">
+<div class="relative health-info">
   {{#if healthyCluster}}
     <div id="healthy-cluster">
         <img id="health-indicator" src="/admin/ui/images/healthy-cluster.png" alt="" />
