--- a/priv/admin/css/compiled/cluster.css
+++ b/priv/admin/css/compiled/cluster.css
@@ -20,36 +20,19 @@ h3 {
 .more-node-actions td {
   padding: 0 5px;
 }
-.actions-box {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  background: rgba(0,0,0,0.3);
-  margin-top: -6px;
-  margin-bottom: 15px;
-  border-bottom: 1px solid rgba(255,255,255,0.18);
-  padding: 15px;
-  margin-right: 2em;
-  display: none;
-}
 .button-column {
   text-align: right;
 }
 .switch-box {
-  width: 200px;
+  width: 125px;
   height: auto;
   vertical-align: top;
 }
 .switch-box div {
+  width: 88px;
   padding-left: 4px;
 }
-.switch-box span {
-  display: inline-block;
-  height: 27px;
-  vertical-align: top;
-  padding: 10px 8px 0;
-}
-.switch-box.on span {
+.switch-box.on > div {
   -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
   -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
   box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
@@ -69,7 +52,7 @@ h3 {
   padding-left: 6px;
 }
 .pct-box {
-  margin-top: 1px;
+  margin-top: 8px;
   display: inline-block;
   vertical-align: middle;
 }
@@ -132,12 +115,18 @@ h3 {
   opacity: 1;
   filter: alpha(opacity=100);
 }
+.ring_pct-box {
+  width: 150px;
+}
+.memory-box {
+  width: 175px;
+}
 .membar-bg {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
   width: 79px;
-  height: 32px;
+  height: 30px;
   position: relative;
   display: inline-block;
   vertical-align: middle;
@@ -157,7 +146,7 @@ h3 {
   -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.18);
   box-shadow: 0 1px 0 rgba(255,255,255,0.18);
   width: 100%;
-  height: 28px;
+  height: 26px;
   position: absolute;
   left: 0;
   top: 0;
@@ -167,7 +156,7 @@ h3 {
 }
 .mem-colors {
   width: 75px;
-  height: 28px;
+  height: 26px;
   float: left;
   margin: 2px 0 0 2px;
 }
@@ -176,7 +165,7 @@ h3 {
 .erlang-mem,
 .unknown-mem {
   width: auto;
-  height: 28px;
+  height: 26px;
   background: url("/admin/ui/images/mem-bar-overlay.png") left top repeat transparent;
   float: left;
   z-index: 1;
@@ -185,9 +174,174 @@ h3 {
   background-color: rgba(65,179,243,0.8);
 }
 .erlang-mem {
-  background-color: rgba(254,157,46,0.8);
+  background-color: rgba(70,166,55,0.8);
 }
 .unknown-mem {
   background-color: #404040;
   width: 100%;
 }
+.action-button {
+  width: 45px;
+  height: 45px;
+  background: #434343;
+  background: -moz-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #616161), color-stop(100%, #434343));
+  background: -webkit-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -o-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -ms-linear-gradient(top, #616161 0%, #434343 100%);
+  background: linear-gradient(top bottom, #616161 0%, #434343 100%);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  display: block;
+  margin-bottom: 5px;
+}
+.action-button:hover {
+  background: #434343;
+  background: -moz-linear-gradient(top, #717171 0%, #434343 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #717171), color-stop(100%, #434343));
+  background: -webkit-linear-gradient(top, #717171 0%, #434343 100%);
+  background: -o-linear-gradient(top, #717171 0%, #434343 100%);
+  background: -ms-linear-gradient(top, #717171 0%, #434343 100%);
+  background: linear-gradient(top bottom, #717171 0%, #434343 100%);
+}
+.action-button:active,
+.action-button.pressed {
+  background: #515151;
+  background: -moz-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #434343), color-stop(100%, #515151));
+  background: -webkit-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -o-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -ms-linear-gradient(top, #434343 0%, #515151 100%);
+  background: linear-gradient(top bottom, #434343 0%, #515151 100%);
+}
+.disabled.action-button {
+  background: #515151;
+  background: -moz-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #434343), color-stop(100%, #515151));
+  background: -webkit-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -o-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -ms-linear-gradient(top, #434343 0%, #515151 100%);
+  background: linear-gradient(top bottom, #434343 0%, #515151 100%);
+}
+.action-icon {
+  width: 45px;
+  height: 45px;
+  -webkit-box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
+  -moz-box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
+  box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  display: block;
+  background: url("/admin/ui/images/action-button-sprite.png") left top no-repeat transparent;
+}
+.actions-box {
+  -webkit-border-bottom-left-radius: 10px;
+  -moz-border-radius-bottomleft: 10px;
+  border-bottom-left-radius: 10px;
+  -webkit-border-bottom-right-radius: 10px;
+  -moz-border-radius-bottomright: 10px;
+  border-bottom-right-radius: 10px;
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  border-top-left-radius: 4px;
+  background: rgba(0,0,0,0.3);
+  margin-top: -6px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid rgba(255,255,255,0.18);
+  padding: 15px;
+  margin-right: 33px;
+  display: none;
+}
+.actions-box > div > span {
+  font-family: 'titillium', helvetica, arial, sans-serif;
+  font-weight: bold;
+  color: #efefef;
+  padding-left: 3px;
+}
+.markdown-box,
+.shutdown-box,
+.leave-cluster-box {
+  margin-bottom: 10px;
+  margin-right: 15px;
+}
+.shutdown-button .action-icon {
+  background-position: left bottom;
+}
+.markdown-button .action-icon {
+  background-position: 1px 1px;
+}
+.leave-cluster-button .action-icon {
+  background-position: 1px -44px;
+}
+.replacement-controls {
+  float: left;
+  width: auto;
+}
+.replacement-node-dropdown {
+  width: 100%;
+  float: left;
+  margin-bottom: 5px;
+}
+/* RESPONSIVE MEDIA QUERIES */
+@media screen and (min-width : 1100px) {
+  .replacement-controls {
+    width: 250px;
+  }
+}
+@media screen and (max-width : 959px) {
+  .free-memory {
+    display: none;
+  }
+  .actions-box {
+    margin-right: 0;
+  }
+  .switch-box {
+    width: 100px;
+  }
+  .switch-box div {
+    width: 78px;
+    padding-left: 0;
+  }
+  .switch-box > div {
+    width: auto;
+    padding: 0;
+    text-align: center;
+  }
+  .actions-header {
+    padding-left: 0;
+    text-align: center;
+  }
+}
+@media screen and (max-width : 699px) {
+  .status-box,
+  .ring_pct-box,
+  .memory-box {
+    width: auto;
+  }
+  .status-box {
+    text-align: center;
+  }
+  .gui-light span {
+    display: none;
+  }
+  .markdown-box,
+  .shutdown-box,
+  .leave-cluster-box {
+    margin-right: 10px;
+  }
+  .replacement-controls {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width : 499px) {
+  .switch-box div {
+    padding: 0 7px 0 0;
+    margin: 0 0 0 5px;
+  }
+}
+/* END RESPONSIVE MEDIA QUERIES */
