--- a/priv/admin/css/compiled/ring.css
+++ b/priv/admin/css/compiled/ring.css
@@ -25,3 +25,10 @@ thead tr:hover,
 tr.no-highlight:hover {
   background-color: transparent;
 }
+/* RESPONSIVE MEDIA QUERIES */
+@media screen and (max-width : 649px) {
+  .gui-light span {
+    display: none;
+  }
+}
+/* END RESPONSIVE MEDIA QUERIES */
