--- a/priv/admin/css/snapshot.styl
+++ b/priv/admin/css/snapshot.styl
@@ -31,3 +31,32 @@ CSS to be applied ONLY on the snapshot page
   dimensions(311px, 309px)
   float        : left
   margin-right : 25px
+
+/* RESPONSIVE MEDIA QUERIES */
+
+@media screen and (max-width : 899px)
+
+  #health-indicator
+    dimensions(250px, 249px)
+    
+  #healthy-cluster section, #unhealthy-cluster section
+    padding-left : 275px
+    
+@media screen and (max-width : 499px)
+
+  .health-info
+    text-align : center
+
+  #health-indicator
+    margin  : 0 auto
+    float   : none
+    display : block
+    
+  #healthy-cluster section, #unhealthy-cluster section
+    padding-left : 0
+    margin       : 0 auto
+    text-align   : left
+
+
+/* END RESPONSIVE MEDIA QUERIES */
+
