commented out tools for the new cluster management api, commented out broken stylus plugin in rebar.config

--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -127,7 +127,7 @@
                     <span class="leave-cluster-label block">Leave</span>
                     <div class="clear"></div>
                 </div>
-                
+                <!-- These are the dropdown and checkboxes for the new management protocol
                 <div class="replacement-controls">
                     <div class="gui-dropdown-wrapper replacement-node-dropdown">
                         <div class="gui-dropdown-bg gui-text">Replacement Node</div>
@@ -147,7 +147,7 @@
                         <span>Force Replace</span>
                     </div>
                 </div>
-                
+                -->
                 <div class="clear"></div>
             </div>
             <div class="clear"></div>
