Remove breakout of stylesheets.
Use one sheet, and no longer use DOM-manipulation to change the
stylesheets.

Conflicts:
	priv/admin/js/legacy/gui.js

--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -134,7 +134,7 @@ th
 
   span
     vendor('box-shadow', 0 0 20px riakorange)
-    gradient(lighten(riakorange, 33%), riakorange)
+    gradient(lightorange, riakorange)
 
 .nav-li .nav-item:hover
   cursor : pointer
