--- a/priv/admin/css/reusable.styl
+++ b/priv/admin/css/reusable.styl
@@ -1,15 +1,16 @@
 
 /* Variables */
-coverup    = rgba(0, 0, 0, .85)
-darkened   = rgba(0, 0, 0, .3)
-darkGray   = #2d2d2d
-mediumGray = #cccccc
-lightGray  = #efefef
-lightWhite = rgba(255, 255, 255, .18)
-highlight  = rgba(255, 255, 255, .08)
-offlight   = #767676
-riakorange = #f99d33
-riakred    = #f05f5f
+coverup     = rgba(0, 0, 0, .85)
+darkened    = rgba(0, 0, 0, .3)
+darkGray    = #2d2d2d
+mediumGray  = #cccccc
+lightGray   = #efefef
+lightWhite  = rgba(255, 255, 255, .18)
+highlight   = rgba(255, 255, 255, .08)
+offlight    = #767676
+riakorange  = #f99d33
+lightorange = lighten(riakorange, 33%)
+riakred     = #f05f5f
 
 /* End Variables */
 
