--- a/priv/admin/css/style.styl
+++ b/priv/admin/css/style.styl
@@ -8,4 +8,6 @@ Imports and arranges all other stylus files.
 @import reset
 @import fonts
 @import general
-@import responsive
+@import snapshot
+@import cluster
+@import ring
