--- a/priv/admin/js/templates/application.hbs
+++ b/priv/admin/js/templates/application.hbs
@@ -1,13 +1,12 @@
 <div id="header">
     <div id="navbar">
         <a id="riak-control-logo"></a>
-        <!--<a id="basho-logo" href="http://www.basho.com" target="_blank"></a>-->
         <nav>
             <ul id="nav-ul">
                 <li id="nav-ring" class="nav-li"><a {{action showRing href=true}} class="gui-text-bold nav-item"></a><span class="indicator"></span></li>
                 <li id="nav-cluster" class="nav-li"><a {{action showCluster href=true}} class="gui-text-bold nav-item"></a><span class="indicator"></span></li>
                 <li id="nav-snapshot" class="nav-li"><a {{action showSnapshot href=true}} class="gui-text-bold nav-item"></a><span class="indicator"></span></li>
-                <!--
+                <!-- Pages to come in the future...
                 <li id="nav-objects" class="nav-li-disabled"><a class="gui-text-bold nav-item"><span class="nav-text">Objects</span></a></li>
                 <li id="nav-mapreduce" class="nav-li-disabled"><a class="gui-text-bold nav-item"><span class="nav-text">MapReduce</span></a></li>
                 <li id="nav-graphs" class="nav-li-disabled"><a class="gui-text-bold nav-item"><span class="nav-text">Graphs</span></a></li>
@@ -15,10 +14,6 @@
                 <li id="nav-support" class="nav-li-disabled"><a class="gui-text-bold nav-item"><span class="nav-text">Support</span></a></li>
                 -->
             </ul>
-            <!-- will not need these anymore or the corresponding js
-            <div id="active-nav"></div>
-            <div id="split-bar"></div>
-            -->
         </nav>
     </div>
 </div>
