--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -819,3 +819,447 @@ input.gui-rect-button:active {
     padding-bottom: 5px;
   }
 }
+#snapshot-page #healthy-cluster,
+#snapshot-page #unhealthy-cluster {
+  padding-top: 25px;
+}
+#snapshot-page #healthy-cluster section,
+#snapshot-page #unhealthy-cluster section {
+  padding-left: 336px;
+}
+#snapshot-page #healthy-cluster h2,
+#snapshot-page #unhealthy-cluster h2 {
+  padding-top: 20px;
+}
+#snapshot-page #healthy-cluster h3,
+#snapshot-page #unhealthy-cluster h3 {
+  margin-top: 30px;
+}
+#snapshot-page #healthy-cluster ul,
+#snapshot-page #unhealthy-cluster ul {
+  margin: 10px 0 0 20px;
+}
+#snapshot-page #healthy-cluster li,
+#snapshot-page #unhealthy-cluster li {
+  font-family: 'menlo', 'consolas', 'monaco', monospace;
+  line-height: 1.5;
+}
+#snapshot-page #healthy-cluster li a,
+#snapshot-page #unhealthy-cluster li a {
+  color: #efefef;
+}
+#snapshot-page #health-indicator {
+  width: 311px;
+  height: 309px;
+  float: left;
+  margin-right: 25px;
+}
+@media screen and (max-width : 899px) {
+  #snapshot-page #health-indicator {
+    width: 250px;
+    height: 249px;
+  }
+  #snapshot-page #healthy-cluster section,
+  #snapshot-page #unhealthy-cluster section {
+    padding-left: 275px;
+  }
+}
+@media screen and (max-width : 499px) {
+  #snapshot-page .health-info {
+    text-align: center;
+  }
+  #snapshot-page #health-indicator {
+    margin: 0 auto;
+    float: none;
+    display: block;
+  }
+  #snapshot-page #healthy-cluster section,
+  #snapshot-page #unhealthy-cluster section {
+    padding-left: 0;
+    margin: 0 auto;
+    text-align: left;
+  }
+}
+#cluster-page h3 {
+  font-family: 'noticia', georgia, serif;
+}
+#cluster-page #add-node {
+  padding-top: 40px;
+  margin-bottom: 25px;
+}
+#cluster-page .add-node-table tr td {
+  padding-top: 25px;
+}
+#cluster-page .more-node-actions {
+  display: none;
+  -webkit-box-shadow: 0 3px 5px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0 3px 5px rgba(0,0,0,0.3);
+  box-shadow: 0 3px 5px rgba(0,0,0,0.3);
+}
+#cluster-page .more-node-actions td {
+  padding: 0 5px;
+}
+#cluster-page .button-column {
+  text-align: right;
+}
+#cluster-page .switch-box {
+  width: 125px;
+  height: auto;
+  vertical-align: top;
+}
+#cluster-page .switch-box div {
+  width: 88px;
+  padding-left: 4px;
+}
+#cluster-page .switch-box.on > div {
+  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+  -moz-border-radius-topright: 4px;
+  border-top-right-radius: 4px;
+  background: rgba(0,0,0,0.3);
+}
+#cluster-page .status-box {
+  width: 170px;
+  height: auto;
+}
+#cluster-page .actions-header {
+  padding-left: 6px;
+}
+#cluster-page .pct-box {
+  margin-top: 8px;
+  display: inline-block;
+  vertical-align: middle;
+}
+#cluster-page .pct-arrows {
+  width: 19px;
+  height: 33px;
+  background: url("/admin/ui/images/pct-arrows-sprite.png") no-repeat transparent;
+  margin: 0 5px 0 0;
+  display: inline-block;
+  vertical-align: middle;
+}
+#cluster-page .pct-gaining {
+  background-position: -19px top;
+}
+#cluster-page .pct-losing {
+  background-position: -38px top;
+}
+#cluster-page .pct-static {
+  background-position: left top;
+}
+#cluster-page .green-pct-arrow {
+  width: 19px;
+  height: 33px;
+  background: url("/admin/ui/images/pct-arrows-sprite.png") no-repeat -57px top transparent;
+  margin: 0 5px 0 0;
+  display: none;
+}
+#cluster-page #node-error {
+  font-family: 'titillium', helvetica, arial, sans-serif;
+  -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  padding: 8px 10px 8px 12px;
+  background: rgba(232,78,78,0.5);
+  border: 1px solid rgba(235,105,105,0.5);
+}
+#cluster-page #node-error .error-link {
+  font-family: 'titillium', helvetica, arial, sans-serif;
+  font-weight: bold;
+  padding-left: 5px;
+}
+#cluster-page #node-error .error-link:hover {
+  text-decoration: underline;
+}
+#cluster-page #node-error .close-error {
+  width: 16px;
+  height: 16px;
+  opacity: 0.6;
+  filter: alpha(opacity=60);
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  vertical-align: middle;
+  background: url("/admin/ui/images/close-error.png") left top no-repeat transparent;
+}
+#cluster-page #node-error .close-error:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+#cluster-page .ring_pct-box {
+  width: 150px;
+}
+#cluster-page .memory-box {
+  width: 175px;
+}
+#cluster-page .membar-bg {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  width: 79px;
+  height: 30px;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+}
+#cluster-page .membar-fg {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background: rgba(255,255,255,0.05);
+  background: -moz-linear-gradient(top, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.05) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255,255,255,0.4)), color-stop(100%, rgba(255,255,255,0.05)));
+  background: -webkit-linear-gradient(top, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.05) 100%);
+  background: -o-linear-gradient(top, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.05) 100%);
+  background: -ms-linear-gradient(top, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.05) 100%);
+  background: linear-gradient(top bottom, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0.05) 100%);
+  -webkit-box-shadow: 0 1px 0 rgba(255,255,255,0.18);
+  -moz-box-shadow: 0 1px 0 rgba(255,255,255,0.18);
+  box-shadow: 0 1px 0 rgba(255,255,255,0.18);
+  width: 100%;
+  height: 26px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 75px;
+  z-index: 5;
+  border: 2px solid #1d1d1d;
+}
+#cluster-page .mem-colors {
+  width: 75px;
+  height: 26px;
+  float: left;
+  margin: 2px 0 0 2px;
+}
+#cluster-page .membar-mem {
+  width: auto;
+  height: 26px;
+  background: url("/admin/ui/images/mem-bar-overlay.png") left top repeat transparent;
+  float: left;
+  z-index: 1;
+}
+#cluster-page .non-erlang-mem {
+  width: auto;
+  height: 26px;
+  background: url("/admin/ui/images/mem-bar-overlay.png") left top repeat transparent;
+  float: left;
+  z-index: 1;
+  background-color: rgba(65,179,243,0.8);
+}
+#cluster-page .erlang-mem {
+  width: auto;
+  height: 26px;
+  background: url("/admin/ui/images/mem-bar-overlay.png") left top repeat transparent;
+  float: left;
+  z-index: 1;
+  background-color: rgba(70,166,55,0.8);
+}
+#cluster-page .unknown-mem {
+  width: auto;
+  height: 26px;
+  background: url("/admin/ui/images/mem-bar-overlay.png") left top repeat transparent;
+  float: left;
+  z-index: 1;
+  background-color: #404040;
+  width: 100%;
+}
+#cluster-page .action-button {
+  width: 45px;
+  height: 45px;
+  background: #434343;
+  background: -moz-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #616161), color-stop(100%, #434343));
+  background: -webkit-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -o-linear-gradient(top, #616161 0%, #434343 100%);
+  background: -ms-linear-gradient(top, #616161 0%, #434343 100%);
+  background: linear-gradient(top bottom, #616161 0%, #434343 100%);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  display: block;
+  margin-bottom: 5px;
+}
+#cluster-page .action-button:hover {
+  background: #434343;
+  background: -moz-linear-gradient(top, #717171 0%, #434343 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #717171), color-stop(100%, #434343));
+  background: -webkit-linear-gradient(top, #717171 0%, #434343 100%);
+  background: -o-linear-gradient(top, #717171 0%, #434343 100%);
+  background: -ms-linear-gradient(top, #717171 0%, #434343 100%);
+  background: linear-gradient(top bottom, #717171 0%, #434343 100%);
+}
+#cluster-page .action-button:active,
+#cluster-page .action-button.pressed {
+  background: #515151;
+  background: -moz-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #434343), color-stop(100%, #515151));
+  background: -webkit-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -o-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -ms-linear-gradient(top, #434343 0%, #515151 100%);
+  background: linear-gradient(top bottom, #434343 0%, #515151 100%);
+}
+#cluster-page .disabled.action-button {
+  background: #515151;
+  background: -moz-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #434343), color-stop(100%, #515151));
+  background: -webkit-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -o-linear-gradient(top, #434343 0%, #515151 100%);
+  background: -ms-linear-gradient(top, #434343 0%, #515151 100%);
+  background: linear-gradient(top bottom, #434343 0%, #515151 100%);
+}
+#cluster-page .action-icon {
+  width: 45px;
+  height: 45px;
+  -webkit-box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
+  -moz-box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
+  box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  display: block;
+  background: url("/admin/ui/images/action-button-sprite.png") left top no-repeat transparent;
+}
+#cluster-page .actions-box {
+  -webkit-border-bottom-left-radius: 10px;
+  -moz-border-radius-bottomleft: 10px;
+  border-bottom-left-radius: 10px;
+  -webkit-border-bottom-right-radius: 10px;
+  -moz-border-radius-bottomright: 10px;
+  border-bottom-right-radius: 10px;
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  border-top-left-radius: 4px;
+  background: rgba(0,0,0,0.3);
+  margin-top: -6px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid rgba(255,255,255,0.18);
+  padding: 15px;
+  margin-right: 33px;
+  display: none;
+}
+#cluster-page .actions-box > div > span {
+  font-family: 'titillium', helvetica, arial, sans-serif;
+  font-weight: bold;
+  color: #efefef;
+  padding-left: 3px;
+}
+#cluster-page .markdown-box,
+#cluster-page .shutdown-box,
+#cluster-page .leave-cluster-box {
+  margin-bottom: 10px;
+  margin-right: 15px;
+}
+#cluster-page .shutdown-button .action-icon {
+  background-position: left bottom;
+}
+#cluster-page .markdown-button .action-icon {
+  background-position: 1px 1px;
+}
+#cluster-page .leave-cluster-button .action-icon {
+  background-position: 1px -44px;
+}
+#cluster-page .replacement-controls {
+  float: left;
+  width: auto;
+}
+#cluster-page .replacement-node-dropdown {
+  width: 100%;
+  float: left;
+  margin-bottom: 5px;
+}
+@media screen and (min-width : 1100px) {
+  #cluster-page .replacement-controls {
+    width: 250px;
+  }
+}
+@media screen and (max-width : 959px) {
+  #cluster-page .free-memory {
+    display: none;
+  }
+  #cluster-page .actions-box {
+    margin-right: 0;
+  }
+  #cluster-page .switch-box {
+    width: 100px;
+  }
+  #cluster-page .switch-box div {
+    width: 78px;
+    padding-left: 0;
+  }
+  #cluster-page .switch-box > div {
+    width: auto;
+    padding: 0;
+    text-align: center;
+  }
+  #cluster-page .actions-header {
+    padding-left: 0;
+    text-align: center;
+  }
+}
+@media screen and (max-width : 699px) {
+  #cluster-page .status-box,
+  #cluster-page .ring_pct-box,
+  #cluster-page .memory-box {
+    width: auto;
+  }
+  #cluster-page .status-box {
+    text-align: center;
+  }
+  #cluster-page .gui-light span {
+    display: none;
+  }
+  #cluster-page .markdown-box,
+  #cluster-page .shutdown-box,
+  #cluster-page .leave-cluster-box {
+    margin-right: 10px;
+  }
+  #cluster-page .replacement-controls {
+    margin-right: 0;
+  }
+}
+@media screen and (max-width : 499px) {
+  #cluster-page .switch-box div {
+    padding: 0 7px 0 0;
+    margin: 0 0 0 5px;
+  }
+}
+#ring-page #ring-filter {
+  text-align: left;
+  padding-left: 25px;
+  margin-top: -5px;
+  float: right;
+}
+#ring-page #ring-filter .gui-dropdown-wrapper {
+  width: 100%;
+  height: 30px;
+  min-width: 169px;
+}
+#ring-page h3 {
+  color: #efefef;
+}
+#ring-page #partition-list {
+  margin-top: 13px;
+}
+#ring-page tr:hover {
+  background-color: rgba(255,255,255,0.08);
+}
+#ring-page thead tr:hover,
+#ring-page tr.no-highlight:hover {
+  background-color: transparent;
+}
+@media screen and (max-width : 649px) {
+  #ring-page .gui-light span {
+    display: none;
+  }
+}
