--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -4,35 +4,37 @@ CSS to be applied ONLY on the snapshot page
 */
 
 @import reusable
+
+#ring-page
   
-#ring-filter
-  text-align   : left
-  padding-left : 25px
-  margin-top   : -5px
-  float        : right
+  #ring-filter
+    text-align   : left
+    padding-left : 25px
+    margin-top   : -5px
+    float        : right
 
-  .gui-dropdown-wrapper
-    dimensions(100%, 30px)
-    min-width : 169px
+    .gui-dropdown-wrapper
+      dimensions(100%, 30px)
+      min-width : 169px
 
-h3
-  color : lightGray
+  h3
+    color : lightGray
 
-#partition-list
-  margin-top : 13px
+  #partition-list
+    margin-top : 13px
 
-tr:hover
-  background-color : highlight
-  
-thead tr:hover, tr.no-highlight:hover
-  background-color : transparent
-
-
-/* RESPONSIVE MEDIA QUERIES */
-
-@media screen and (max-width : 649px)
+  tr:hover
+    background-color : highlight
     
-  .gui-light span
-    display : none
+  thead tr:hover, tr.no-highlight:hover
+    background-color : transparent
 
-/* END RESPONSIVE MEDIA QUERIES */
+
+  /* RESPONSIVE MEDIA QUERIES */
+
+  @media screen and (max-width : 649px)
+      
+    .gui-light span
+      display : none
+
+  /* END RESPONSIVE MEDIA QUERIES */
