--- a/priv/admin/css/snapshot.styl
+++ b/priv/admin/css/snapshot.styl
@@ -5,58 +5,60 @@ CSS to be applied ONLY on the snapshot page
 
 @import reusable
 
-#healthy-cluster, #unhealthy-cluster
-  padding-top : 25px
-  
-  section
-    padding-left : 336px
-    
-  h2
-    padding-top : 20px
-    
-  h3
-    margin-top : 30px
-    
-  ul
-    margin : 10px 0 0 20px
-  
-  li
-    monospace()
-    line-height : 1.5
-    
-    a
-      color : lightGray
+#snapshot-page
 
-#health-indicator
-  dimensions(311px, 309px)
-  float        : left
-  margin-right : 25px
-
-/* RESPONSIVE MEDIA QUERIES */
-
-@media screen and (max-width : 899px)
+  #healthy-cluster, #unhealthy-cluster
+    padding-top : 25px
+    
+    section
+      padding-left : 336px
+      
+    h2
+      padding-top : 20px
+      
+    h3
+      margin-top : 30px
+      
+    ul
+      margin : 10px 0 0 20px
+    
+    li
+      monospace()
+      line-height : 1.5
+      
+      a
+        color : lightGray
 
   #health-indicator
-    dimensions(250px, 249px)
-    
-  #healthy-cluster section, #unhealthy-cluster section
-    padding-left : 275px
-    
-@media screen and (max-width : 499px)
+    dimensions(311px, 309px)
+    float        : left
+    margin-right : 25px
 
-  .health-info
-    text-align : center
+  /* RESPONSIVE MEDIA QUERIES */
 
-  #health-indicator
-    margin  : 0 auto
-    float   : none
-    display : block
-    
-  #healthy-cluster section, #unhealthy-cluster section
-    padding-left : 0
-    margin       : 0 auto
-    text-align   : left
+  @media screen and (max-width : 899px)
+
+    #health-indicator
+      dimensions(250px, 249px)
+      
+    #healthy-cluster section, #unhealthy-cluster section
+      padding-left : 275px
+      
+  @media screen and (max-width : 499px)
+
+    .health-info
+      text-align : center
+
+    #health-indicator
+      margin  : 0 auto
+      float   : none
+      display : block
+      
+    #healthy-cluster section, #unhealthy-cluster section
+      padding-left : 0
+      margin       : 0 auto
+      text-align   : left
 
 
-/* END RESPONSIVE MEDIA QUERIES */
+  /* END RESPONSIVE MEDIA QUERIES */
 
