--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -1,159 +1,147 @@
-<section id="title-container">
-  <div class="side-line"></div>
-  <div class="title-box">
-    <span class="vert-border-left"></span>
-    <h1 id="cluster-headline" class="gui-headline-bold page-title">Cluster Management</h1>
-    <span class="vert-border-right"></span>
-  </div>
-  <div class="side-line"></div>
-  <div class="clear"></div>
-</section>
+<div id="cluster-page">
 
-<div id="add-node">
-    <h2 class="gui-headline">Join Nodes</h2>
-    <span class="gui-text-flat italic">Type a node name or list of names separated by commas.</span>
-    <table class="add-node-table">
-        <tr class="no-highlight">
-            <td id="add-node-box">
-                <input id="node-to-add" class="gui-input gui-text" type="text" name="nodeName" />
-            </td>
-            <td class="button-column">
-                <a id="add-node-button" class="gui-point-button gui-text-bold right">
-                    <span class="gui-button-msg">ADD NODES</span>
-                </a>
-            </td>
-        </tr>
-    </table>
-    <div id="node-error" class="hide">
-        <a class="close-error gui-text"></a>
-        <a class="error-text offline"></a>
-        <a class="error-link gui-text underline" href="#"></a>
+    <section id="title-container">
+      <div class="side-line"></div>
+      <div class="title-box">
+        <span class="vert-border-left"></span>
+        <h1 id="cluster-headline" class="gui-headline-bold page-title">Cluster Management</h1>
+        <span class="vert-border-right"></span>
+      </div>
+      <div class="side-line"></div>
+      <div class="clear"></div>
+    </section>
+
+    <div id="add-node">
+        <h2 class="gui-headline">Join Nodes</h2>
+        <span class="gui-text-flat italic">Type a node name or list of names separated by commas.</span>
+        <table class="add-node-table">
+            <tr class="no-highlight">
+                <td id="add-node-box">
+                    <input id="node-to-add" class="gui-input gui-text" type="text" name="nodeName" />
+                </td>
+                <td class="button-column">
+                    <a id="add-node-button" class="gui-point-button gui-text-bold right">
+                        <span class="gui-button-msg">ADD NODES</span>
+                    </a>
+                </td>
+            </tr>
+        </table>
+        <div id="node-error" class="hide">
+            <a class="close-error gui-text"></a>
+            <a class="error-text offline"></a>
+            <a class="error-link gui-text underline" href="#"></a>
+        </div>
+    </div><!-- #add-node -->
+
+    <h2 class="gui-headline has-cut">
+        Node List
+        <span id="total-number" class="gui-text"></span>
+    </h2>
+    <div id="node-list" class="hide">
+        <table class="list-table" id="cluster-table">
+            <tr class="table-head has-cut">
+                <td><h3>Status</h3></td>
+                <td><h3>Name</h3></td>
+                <td><h3 class="actions-header">Actions</h3></td>
+                <td><h3>Partitions</h3></td>
+                <td><h3>RAM Use</h3></td>
+            </tr>
+        </table>
     </div>
-</div><!-- #add-node -->
+    <div class="spinner-box"><img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif"></div>
 
-<h2 class="gui-headline has-cut">
-    Node List
-    <span id="total-number" class="gui-text"></span>
-</h2>
-<div id="node-list" class="hide">
-    <table class="list-table" id="cluster-table">
-        <tr class="table-head has-cut">
-            <td><h3>Status</h3></td>
-            <td><h3>Name</h3></td>
-            <td><h3 class="actions-header">Actions</h3></td>
-            <td><h3>Partitions</h3></td>
-            <td><h3>RAM Use</h3></td>
+    <!-- node template -->
+    <table class="hide">
+        <tr class="node row-template">
+            <td class="status-box gui-text">
+                <a class="gui-light status-light"><span class="status">Joining...</span></a>
+            </td>
+            <td class="name-box gui-text">
+                <div class="gui-text">
+                    <div class="name gui-field"></div>
+                </div>
+            </td>
+            <!-- New switch template -->
+            <td class="switch-box off">
+                <div>
+                    <div class="gui-switch off"></div>
+                </div>
+            </td>
+            <td class="gui-text ring_pct-box">
+                <div class="left pct-arrows pct-static">
+                    <div class="green-pct-arrow"></div>
+                </div>
+                <div class="left gui-text pct-box">
+                    <div class="i-block ring_pct"></div>
+                </div>
+                <div class="clear"></div>
+            </td>
+            <td class="gui-text memory-box">
+                <div class="membar-bg">
+                    <div class="mem-colors">
+                        <div class="erlang-mem mem-color" name=""></div>
+                        <div class="non-erlang-mem mem-color" name=""></div>
+                        <div class="unknown-mem"></div>
+                    </div>
+                    <div class="membar-fg"></div>
+                </div>
+                <span class="free-memory"></span>
+            </td>
+        </tr>
+        <tr class="more-node-actions more-actions-template">
+            <td>&nbsp;</td>
+            <td colspan="2" class="more-actions-td">
+                <div class="actions-box gui-text">
+                    <div class="markdown-box left">
+                        <a class="markdown-button action-button pressed disabled">
+                            <span class="action-icon"></span>
+                        </a>
+                        <span class="markdown-label block disabled">Down</span>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="shutdown-box left">
+                        <a class="shutdown-button action-button">
+                            <span class="action-icon"></span>
+                        </a>
+                        <span class="shutdown-label block">Stop</span>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="leave-cluster-box left">
+                        <a class="leave-cluster-button action-button">
+                            <span class="action-icon"></span>
+                        </a>
+                        <span class="leave-cluster-label block">Leave</span>
+                        <div class="clear"></div>
+                    </div>
+                    <!-- These are the dropdown and checkboxes for the new management protocol
+                    <div class="replacement-controls">
+                        <div class="gui-dropdown-wrapper replacement-node-dropdown">
+                            <div class="gui-dropdown-bg gui-text">Replacement Node</div>
+                            <div class="gui-dropdown-cap left"></div>
+                            <select class="gui-dropdown">
+                                <option value="">All</option>
+                            </select>
+                        </div>
+                        <div class="clear"></div>
+                        <div class="gui-checkbox-wrapper">
+                            <input class="gui-checkbox" type="checkbox" value="forceleave" />
+                            <span>Force Leave</span>
+                        </div>
+                        
+                        <div class="gui-checkbox-wrapper">
+                            <input class="gui-checkbox" type="checkbox" value="forcereplace" />
+                            <span>Force Replace</span>
+                        </div>
+                    </div>
+                    -->
+                    <div class="clear"></div>
+                </div>
+                <div class="clear"></div>
+            </td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
         </tr>
     </table>
+    <!-- end node template -->
+    
 </div>
-<div class="spinner-box"><img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif"></div>
-
-<!-- node template -->
-<table class="hide">
-    <tr class="node row-template">
-        <td class="status-box gui-text">
-            <a class="gui-light status-light"><span class="status">Joining...</span></a>
-        </td>
-        <td class="name-box gui-text">
-            <div class="gui-text">
-                <div class="name gui-field"></div>
-            </div>
-        </td>
-        <!-- Old slider template
-        <td class="more-actions-slider-box gui-text">
-            <div class="gui-slider gui-text">
-                <div class="gui-slider-activate"></div>
-                <div class="gui-slider-groove">
-                    <div class="gui-slider-msg isLeft">View Actions</div>
-                    <div class="gui-slider-msg isRight">Hide Actions</div>
-                </div>
-            </div>
-            <div class="gui-slider-leaving hide"></div>
-        </td>
-        -->
-        <!-- New switch template -->
-        <td class="switch-box off">
-            <div>
-                <div class="gui-switch off"></div>
-            </div>
-        </td>
-        <td class="gui-text ring_pct-box">
-            <div class="left pct-arrows pct-static">
-                <div class="green-pct-arrow"></div>
-            </div>
-            <div class="left gui-text pct-box">
-                <div class="i-block ring_pct"></div>
-                <!--
-                <span class="monospace gray-text">:</span>
-                <div class="i-block pending_pct gui-field-input"></div>
-                -->
-            </div>
-            <div class="clear"></div>
-        </td>
-        <td class="gui-text memory-box">
-            <div class="membar-bg">
-                <div class="mem-colors">
-                    <div class="erlang-mem mem-color" name=""></div>
-                    <div class="non-erlang-mem mem-color" name=""></div>
-                    <div class="unknown-mem"></div>
-                </div>
-                <div class="membar-fg"></div>
-            </div>
-            <span class="free-memory"></span>
-        </td>
-    </tr>
-    <tr class="more-node-actions more-actions-template">
-        <td>&nbsp;</td>
-        <td colspan="2" class="more-actions-td">
-            <div class="actions-box gui-text">
-                <div class="markdown-box left">
-                    <a class="markdown-button action-button pressed disabled">
-                        <span class="action-icon"></span>
-                    </a>
-                    <span class="markdown-label block disabled">Down</span>
-                    <div class="clear"></div>
-                </div>
-                <div class="shutdown-box left">
-                    <a class="shutdown-button action-button">
-                        <span class="action-icon"></span>
-                    </a>
-                    <span class="shutdown-label block">Stop</span>
-                    <div class="clear"></div>
-                </div>
-                <div class="leave-cluster-box left">
-                    <a class="leave-cluster-button action-button">
-                        <span class="action-icon"></span>
-                    </a>
-                    <span class="leave-cluster-label block">Leave</span>
-                    <div class="clear"></div>
-                </div>
-                <!-- These are the dropdown and checkboxes for the new management protocol
-                <div class="replacement-controls">
-                    <div class="gui-dropdown-wrapper replacement-node-dropdown">
-                        <div class="gui-dropdown-bg gui-text">Replacement Node</div>
-                        <div class="gui-dropdown-cap left"></div>
-                        <select class="gui-dropdown">
-                            <option value="">All</option>
-                        </select>
-                    </div>
-                    <div class="clear"></div>
-                    <div class="gui-checkbox-wrapper">
-                        <input class="gui-checkbox" type="checkbox" value="forceleave" />
-                        <span>Force Leave</span>
-                    </div>
-                    
-                    <div class="gui-checkbox-wrapper">
-                        <input class="gui-checkbox" type="checkbox" value="forcereplace" />
-                        <span>Force Replace</span>
-                    </div>
-                </div>
-                -->
-                <div class="clear"></div>
-            </div>
-            <div class="clear"></div>
-        </td>
-        <td>&nbsp;</td>
-        <td>&nbsp;</td>
-    </tr>
-</table>
-<!-- end node template -->
