Omit switch for Control node.

--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -63,7 +63,7 @@
             </td>
             <!-- New switch template -->
             <td class="switch-box off">
-                <div>
+                <div class="gui-switch-container">
                     <div class="gui-switch off"></div>
                 </div>
             </td>
